# horizon-demopanel

./: MANIFEST.in  README.md  install-cats.sh  setup.cfg
catsplugin/content/: panel.py
catsplugin/content/catspanel/: views.py
catsplugin/content/catspanel/templates/catspanel/: home.html
catsplugin/enabled/: _30000_catsplugin.py
demopanel/content/demopanel/: panel.py
demopanel/enabled/: _31000_demopanel.py  _31000_demoplugin.py
demoplugin/content/demopanel/: urls.py  views.py
demoplugin/content/demopanel/templates/demopanel/: index.html
demoplugin/enabled/: _31000_demoplugin.py
devstack/: local.conf
