[metadata]
name = myplugin
summary = A panel plugin for OpenStack Dashboard
description-file =
    README.md
author = myname
author_email = myemail
home-page = https://docs.openstack.org/horizon/latest/
classifiers = [
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages =
    myplugin
